# sentinel-rs

./: Cargo.toml  README.md
src/: main.rs  util.rs
src/repo/: local_repository.rs  mod.rs
